# upstageailab-nlp-langchainpjt-langchain-2

./: .gitignore  README.md  baseline.py  chat_history.py  clean_text.py  config.py  llm.py  main.py  pyproject.toml  retriever.py  simple.py  utils.py  vector_store.py
250405/: main.py
250405/data/: 2025년 4월 25일 인기 아이돌 상세 정보.txt
250406/: main.py
250406/vectorstore/: index.faiss  index.pkl
