[project]
name = "upstageailab-nlp-langchainpjt-langchain-2"
version = "0.1.0"
description = ""
authors = [
    {name = "bebeda",email = "bebe217@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-core (>=0.3.51,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-upstage (>=0.6.0,<0.7.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
